# cubemos_ros

./: CMakeLists.txt  README.md  package.xml
include/cubemos_ros/: cubemos_ros.hpp
include/filters/: KalmanLin.h  KalmanRot.h  MediumFilt.h
include/utils/: QuaternionAlgebra.h
launch/: cubemos_ros.launch
msg/: cubemos_body.msg
src/: cubemos.cpp  cubemos2.cpp  nuitrack_skeleton_tracker_filtered_node.cpp
src/filters/: KalmanLin.cpp  KalmanRot.cpp  MediumFilt.cpp
src/nuitrackWrap/: nuitrack_tracker_filtered.cpp
src/utils/: QuaternionAlgebra.cpp
